fix(ui): remove horizontal scrollbar from pages

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 
 html {
 	scroll-padding-top: 64px;
+	overflow-x: hidden;
 }
 
 body {
@@ -28,6 +29,7 @@ body {
 	line-height: 1.5;
 	/* 4. Improve text rendering */
 	-webkit-font-smoothing: antialiased;
+	overflow-x: hidden;
 }
 
 /* 5. Improve media defaults */
@@ -79,16 +81,6 @@ p {
 #root {
 	isolation: isolate;
 	overflow-x: hidden;
-}
-
-body {
-	display: flex;
-	place-items: center;
-	min-width: 100vw;
-	min-height: 100dvh;
-	height: 100%;
-	background-color: var(--white-100);
-	font-family: 'Open Sans', sans-serif;
 }
 
 ul {
