--- a/src/layout/Main/Main.module.css
+++ b/src/layout/Main/Main.module.css
@@ -5,6 +5,7 @@
 	width: 100%;
 	height: 100%;
 	margin: 0 auto;
+	overflow-x: hidden;
 }
 
 .limitedWidth {
